[tool.poetry]
name = "ferret-xai"
version = "0.4.1"
description = "A python package for benchmarking interpretability approaches."
authors = ["Giuseppe Attanasio <giuseppeattanasio6@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/g8a9/ferret"
repository = "https://github.com/g8a9/ferret"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
]

[tool.poetry.dependencies]
python = "^3.7"
transformers = "^4.30.2"
datasets = "^2.13.2"
sentencepiece = "^0.1.99"
captum = "^0.7.0"
shap = "^0.42.1"
seaborn = "^0.12.2"
matplotlib = "^3.5.3"
numpy = "^1.21.6"
pandas = "^1.3.5"
tqdm = "^4.66.1"
scikit-image = "^0.19.3"
opencv-python = "^4.9.0.80"
lime = "^0.2.0.1"
joblib = "^1.3.2"
pytreebank = "^0.2.7"
