[tool.poetry]
name = "ferret-xai"
version = "0.4.2"
description = "A python package for benchmarking interpretability approaches."
authors = ["Giuseppe Attanasio <giuseppeattanasio6@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/g8a9/ferret"
repository = "https://github.com/g8a9/ferret"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]
packages = [
    { include = "ferret" },
]


[tool.poetry.dependencies]
python = "^3.8.0"
transformers = "^4.36.2"
datasets = "^2.16.1"
sentencepiece = "^0.1.99"
captum = "^0.7.0"
shap = "^0.44.0"
seaborn = "^0.13.1"
matplotlib = "^3.7.4"
numpy = "^1.24.4"
pandas = "^2.0.3"
tqdm = "^4.66.1"
scikit-image = "^0.21.0"
opencv-python = "^4.9.0.80"
lime = "^0.2.0.1"
joblib = "^1.3.2"
pytreebank = "^0.2.7"
thermostat-datasets = "^1.1.0"
# Speech-XAI requirements.
pydub = "0.25.1"
whisperx = { git = "https://github.com/m-bain/whisperx.git", branch = "main" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 89

[tool.isort]
profile = "black"
